--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -5,8 +5,8 @@
   <div class="card-content">
     <div class="media">
       <div class="media-left">
-        <figure class="image is-48x48">
-          <%= image_tag "https://bulma.io/images/placeholders/96x96.png", class: "is-rounded" %>
+        <figure class="image" >
+          <%= image_tag(post.small_photo, class: "is-rounded")%>
         </figure>
       </div>
       <div class="media-content">
