adding search from rede social

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -44,7 +44,11 @@ nav .columns .profile {
 .container .text-search{
   padding-left: 30px;
 }
+.container{
+  padding-top: 12px;
+}
 .container .search{
+  padding-top: 13px;
   width: 50%;
   margin: auto;
 }
