--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -44,21 +44,22 @@
       </div>
     </div>
   </nav>
-  <br>
   <div class="container">
     <section>
-      <%= form_with url: home_search_path , method: :get, local: true, class: "" do |form| %>
-      <div class="search ">
-        <%= form.search_field :q, class: "input is-rounded", required: true, placeholder: 'search...', value: params[:q] %>
+      <%= form_with url: home_search_path , method: :get, remote: true, id: "form" do |form| %>
+      <div class="search">
+        <%= form.search_field :q, class: "input is-rounded", placeholder: 'search...', value: params[:q] %>
+        <%= form.select :lists, @lists, {:prompt => 'Selecione o tipo'} %>
+        <%= form.select :accounts , @accounts, {:prompt => 'Selecione uma Rede Social'} %>
+        <%= form.submit %>
       </div>
       <% end %>
     </section>
-    <section>
-      <%= yield %>
-    </section>
-    <footer>
-
-    </footer>
+    <%= yield %>
   </div>
+
+  <footer>
+
+  </footer>
 </body>
 </html>
