--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -41,14 +41,12 @@ nav .columns .profile img{
 nav .columns .profile {
   padding-right: 10px;
 }
-.container .text-search{
-  padding-left: 30px;
-}
+
 .container{
-  padding-top: 12px;
+  padding-top: 11px;
 }
 .container .search{
-  padding-top: 13px;
+  padding-top: 12px;
   width: 50%;
   margin: auto;
 }
@@ -56,7 +54,9 @@ nav .columns .profile {
   margin-bottom: 11px;
   font-size: 18px;
 }
-
+.container .search .coulumns{
+  padding-top: 10px;
+}
 .container .card{
   margin: 14px;
   border-radius: 10px;
